tests/compile_fail/state_machine/non_inline_attr.rs
use moku::*;

#[state_machine]
mod blinky;

fn main() {}
